# onyx-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  settings.toml
.cargo/: config.toml
client/: Cargo.toml
client/src/: assets.rs  data.rs  game.rs  game_state.rs  main.rs  map.rs  network.rs  networking.rs  player.rs  title.rs  title_state.rs  ui.rs  util.rs  utils.rs
client/src/data/: map.rs  player.rs
client/src/data/map/: interop.rs
client/src/game/: map.rs  mod.rs  player.rs
client/src/map/: interop.rs  mod.rs
client/src/states/: mod.rs
client/src/ui/: chat_window.rs  map_editor.rs
common/: Cargo.toml
common/src/: lib.rs  network.rs
common/src/network/: client.rs  server.rs
crates/client/: Cargo.toml
crates/client/src/: assets.rs  main.rs  network.rs  network_old.rs  scene.rs  state.rs  utils.rs
crates/client/src/data/: map.rs  mod.rs  player.rs
crates/client/src/data/map/: interop.rs
crates/client/src/game/: camera.rs  game_old.rs  mod.rs
crates/client/src/game/ui/: chat_window.rs  map_editor.rs  mod.rs
crates/client/src/title/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  network.rs
crates/common/src/network/: client.rs  mod.rs  server.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  network.rs  player.rs
crates/server/src/data/: map.rs  mod.rs  player.rs
server/: Cargo.toml
server/src/: data.rs  main.rs  networking.rs  player.rs
server/src/data/: map.rs  mod.rs  player.rs
src/: lib.rs
src/client/: assets.rs  game_scene.rs  main.rs  network.rs  scene.rs  title_scene.rs  utils.rs
src/client/data/: map.rs  mod.rs  player.rs
src/client/data/map/: interop.rs
src/client/game/: camera.rs  mod.rs
src/client/game/ui/: chat_window.rs  map_editor.rs
src/client/title/: mod.rs
src/client/ui/: chat_window.rs  map_editor.rs  mod.rs
src/network/: client.rs  mod.rs  server.rs
src/server/: main.rs  network.rs  player.rs
src/server/data/: map.rs  mod.rs  player.rs
src/shared/: math.rs  mod.rs
src/shared/network/: client.rs  mod.rs  server.rs
