[package]
name = "onyx-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
bincode = "1.3.3"
egui = "0.18.1"
egui_extras = "0.18.0"
egui-macroquad = "0.11.0"
env_logger = "0.9.0"
glam = { version = "0.14.0", features = ["mint", "serde"] }
itertools = "0.10.3"
log = "0.4.17"
macroquad = "0.3.16"
message-io = { version = "0.14.5", default_features = false, features = ["tcp"] }
mint = { version = "0.5.9", features = ["serde"] }
ndarray = { version = "0.15.4", features = ["serde"] }
onyx-common = { path = "../common" }
serde = "1.0.137"
thiserror = "1.0.31"
strum = "0.24.1"
