[package]
name = "onyx-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
egui = "0.19.0"
egui_extras = "0.19.0"
egui-macroquad = { version = "0.12.0", default_features = false }
glam = { version = "0.21.0", features = ["mint", "serde"] }
log = "0.4.17"
macroquad = { version = "0.3.24", default_features = false }
message-io = { version = "0.14.5", default_features = false, features = ["tcp"] }
mint = { version = "0.5.9", features = ["serde"] }
ndarray = { version = "0.15.4", features = ["serde"] }
common = { package = "onyx-common", path = "../common" }
serde = "1.0.137"
strum = "0.24.1"
thiserror = "1.0.31"
rodio = "0.16.0"
toml = "0.5.9"
rmp-serde = "1.1.0"
env_logger = "0.9.0"
globwalk = "0.8.1"
