[package]
name = "onyx-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
message-io = { version = "0.14.5", default_features = false, features = ["tcp"] }
bincode = "1.3.3"
glam = { version = "0.14.0", features = ["mint", "serde"] }
mint = { version = "0.5.9", features = ["serde"] }
enum-iterator = "1.1.1"
ndarray = { version = "0.15.4", features = ["serde"] }
