[package]
name = "onyx-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
mint = { version = "0.5.9", features = ["serde"] }
strum = { version = "0.24.1", features = ["derive"] }
ndarray = { version = "0.15.4", features = ["serde"] }
crc = "3.0.0"
