[package]
name = "onyx-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bimap = "0.6.2"
bincode = "1.3.3"
env_logger = "0.9.0"
glam = { version = "0.14.0", features = ["serde"] }
log = "0.4.17"
message-io = { version = "0.14.5", default_features = false, features = ["tcp"] }
mint = { version = "0.5.9", features = ["serde"] }
onyx-common = { path = "../common" }
serde = "1.0.137"
