[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
glam = { version = "0.22.0", features = ["mint", "serde"] }
message-io = { version = "0.18.0", default_features = false, features = ["tcp"] }
mint = { version = "0.5.9", features = ["serde"] }
ndarray = { version = "0.15.4", features = ["serde"] }
common = { package = "common", path = "../common" }
serde = "1.0.137"
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.31"
# rodio = "0.16.0"
toml = "0.5.9"
rmp-serde = "1.1.0"
# env_logger = "0.9.0"
globwalk = "0.8.1"
# same as notan_egui
egui_extras = "0.22.0"
ggez = "0.9.3"
ggegui = "0.3.8"
log = "0.4.20"
env_logger = "0.11.1"

