[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
# Pinned to same version as ggez
glam = { version = "0.24.0", features = ["mint", "serde"] }
mint = { version = "0.5.9", features = ["serde"] }
ndarray = { version = "0.15.4", features = ["serde"] }
common = { package = "common", path = "../common" }
serde = "1.0.137"
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.31"
toml = "0.8.14"
rmp-serde = "1.1.0"
globwalk = "0.9.1"
egui_extras = "0.28.0"
ggez = "0.9.3"
ggegui = { version = "0.4.0", path = "../ggegui" }
log = "0.4.20"
env_logger = "0.11.1"
renet = "0.0.15"

