[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
base64ct = { version = "1.5.1", features = ["alloc"] }
bimap = "0.6.3"
chrono = { version = "0.4.19", default-features = false, features = ["std", "clock"] }
common = { package = "common", path = "../common" }
env_logger = "0.11.1"
euclid = { version = "0.22.7", features = ["mint", "serde"] }
log = "0.4.17"
mint = { version = "0.5.9", features = ["serde"] }
ndarray = { version = "0.15.4", features = ["serde"] }
rand = "0.8.5"
renet = "0.0.15"
rmp-serde = "1.1.0"
serde = "1.0.137"
sha2 = "0.10.2"
strum = { version = "0.26.1", features = ["derive"] }
toml = "0.8.10"
uuid = { version = "1.1.2", features = ["v4", "serde", "fast-rng"] }
